periodictable/style.css
body {
	background-color: #222;
	font-family: sans-serif;
	color: #E0E0E0;
}

button {
	padding: 0px;
}

a {
	color: #F00;
}
a:visited {
	color: #F0A;
}

a:hover {
	color: #F0F;
}

.card {
	display: grid;
	grid-template-columns: 9px 9px 9px 9px 9px 9px 9px 9px 9px;
	grid-template-rows: 10px 10px 10px 10px 10px 10px 10px 10px 10px;
	border: 2px solid #222;
	color: #000;
	width: 85px;
	height: 94px;
	text-align: center;
}

.number {
	grid-column: 1 / 9;
	grid-row: span 1;
	font-size: 90%;
	text-align: left;
}

.mass {
	grid-column: 1 / 9;
	grid-row: span 1;
	font-size: 90%;
	text-align: left;
}

.abbr {
	grid-column: 4 / 7;
	grid-row: 4 / 7;
	font-size: 180%;
	text-align: center;
}

.elmname {
	grid-column: span 9;
	grid-row: 8 / 9;
	font-size: 90%;
	text-align: center;
}

.table {
	width: 1656px;
	height: 850px;
	display: grid;
	grid-template-columns: 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px 88px;
	grid-template-rows: 92px 92px 92px 92px 92px 92px 92px 92px 92px;
}

